--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -12,6 +12,7 @@ extends:
   - plugin:@typescript-eslint/recommended
   - plugin:import/recommended
   - plugin:import/typescript
+  - plugin:tailwindcss/recommended
 
 parser: '@typescript-eslint/parser'
 parserOptions:
