--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -12,13 +12,12 @@ extends:
   - plugin:@typescript-eslint/recommended
   - plugin:import/recommended
   - plugin:import/typescript
+  - plugin:solid/recommended
   - plugin:tailwindcss/recommended
 
 parser: '@typescript-eslint/parser'
 parserOptions:
   project: tsconfig.json
-plugins:
-  - '@typescript-eslint'
 
 rules:
   #region eslint
