--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,13 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "ESNext",
-    "types": [
-      "vite/client"
-    ]
-  }
+    "target": "ESNext"
+  },
+  "exclude": [
+    ".github",
+    ".vite",
+    ".vscode",
+    ".yarn",
+    "node_modules"
+  ]
 }
