--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
     "solid-js": "^1.9.2"
   },
   "devDependencies": {
-    "@types/node": "^22.7.5",
+    "@types/node": "^22.7.7",
     "@yarnpkg/sdks": "^3.2.0",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.13",
-    "eslint": "^9.12.0",
+    "eslint": "^9.13.0",
     "eslint-plugin-solid": "^0.14.3",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-unicorn": "^56.0.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "typescript": "5.5.4",
-    "typescript-eslint": "^8.8.1",
-    "vite": "^5.4.8",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.10.0",
+    "vite": "^5.4.9",
     "vite-plugin-solid": "^2.10.2"
   },
   "engines": {
