--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "solid-js": "^1.9.3"
   },
   "devDependencies": {
-    "@types/node": "^22.9.3",
+    "@types/node": "^22.9.4",
     "@yarnpkg/sdks": "^3.2.0",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
@@ -25,8 +25,8 @@
     "eslint-plugin-unicorn": "^56.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.15.0",
+    "typescript": "5.7.2",
+    "typescript-eslint": "^8.16.0",
     "vite": "^5.4.11",
     "vite-plugin-solid": "^2.10.2"
   },
