feat: add verbatimModuleSyntax

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "ESNext"
+    "target": "ESNext",
+    "verbatimModuleSyntax": true
   },
   "exclude": [
     ".github",
